--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,13 @@
-*{
-  padding: 0;
+body {
   margin: 0;
-  box-sizing:  border-box;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-html, body, #root{
-  height: 100%;
-}
-
-body{
-  font: 14px;
-  font-family: sans-serif;
-  background-color: #EFEFEF;
-}
-
-a{
-  text-decoration: none;
-}
-
-ul{
-  list-style: none;
-}
-
-button{
-  cursor: pointer;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
